--- a/_about-us/Former Students' Achievements/2022.md
+++ b/_about-us/Former Students' Achievements/2022.md
@@ -4,3 +4,72 @@ permalink: /about-us/Former-Students-Achievements/2022/
 description: ""
 third_nav_title: Former Students' Achievements
 ---
+<table style="border-collapse:collapse;border:none;mso-border-alt:solid windowtext .5pt;
+ mso-yfti-tbllook:1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt" cellpadding="0" cellspacing="0" border="1" class="MsoTableGrid"><tbody><tr style="mso-yfti-irow:0;mso-yfti-firstrow:yes"><td style="width:84.8pt;border:solid windowtext 1.0pt;mso-border-alt:
+  solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" width="113"><p style="margin-bottom:0cm;text-align:center;
+  line-height:normal" align="center" class="MsoNormal"><strong><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  color:gray;background:white">Institute</span></strong></p></td><td style="width:3.0cm;border:solid windowtext 1.0pt;border-left:
+  none;mso-border-left-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt" width="113"><p style="margin-bottom:0cm;text-align:center;
+  line-height:normal" align="center" class="MsoNormal"><strong><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  color:gray;background:white">Former Students</span></strong></p></td><td style="width:3.0cm;border:solid windowtext 1.0pt;border-left:
+  none;mso-border-left-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt" width="113"><p style="margin-bottom:0cm;text-align:center;
+  line-height:normal" align="center" class="MsoNormal"><strong><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  color:gray;background:white">Course</span></strong></p></td><td style="width:153.6pt;border:solid windowtext 1.0pt;border-left:
+  none;mso-border-left-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt" width="205"><p style="margin-bottom:0cm;text-align:center;
+  line-height:normal" align="center" class="MsoNormal"><strong><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  color:gray;background:white">Award</span></strong></p></td></tr><tr style="mso-yfti-irow:1"><td style="width:84.8pt;border:solid windowtext 1.0pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">Anderson Serangoon Junior College</span></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">Ng Pei Chai Kayleigh</span></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">2021 GCE A-Level</span></p></td><td style="width:153.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="205"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">outstanding result</span></p></td></tr><tr style="mso-yfti-irow:2;height:49.85pt"><td style="width:84.8pt;border:solid windowtext 1.0pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt;height:49.85pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">Temasek Polytechnic</span></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;height:49.85pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><a href="https://geylangmethodistsec.moe.edu.sg/wp-content/uploads/2022/08/AEG_Bronze_Lim-Xie-Quan_907711D.pdf"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:#428BCA;
+  background:white">Lim Xie Quan</span></a></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;height:49.85pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray">Diploma in Aerospace Engineering</span></p></td><td style="width:153.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;height:49.85pt" valign="top" width="205"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;mso-fareast-font-family:
+  &quot;Times New Roman&quot;;color:gray;background:white">Course Bronze Medal</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
+  &quot;Times New Roman&quot;"></span></p><p style="margin-bottom:7.5pt;line-height:normal;background:
+  white" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  mso-fareast-font-family:&quot;Times New Roman&quot;;color:gray">Director's List Award</span></p></td></tr><tr style="mso-yfti-irow:3;mso-yfti-lastrow:yes"><td style="width:84.8pt;border:solid windowtext 1.0pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;mso-border-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">Temasek Polytechnic</span></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><a href="https://geylangmethodistsec.moe.edu.sg/wp-content/uploads/2022/08/CER_Silver_Ng-Kai-Hong_1907770J.pdf"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:#428BCA;
+  background:white">Ng Kai Hong</span></a></p></td><td style="width:3.0cm;border-top:none;border-left:none;
+  border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="113"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;color:gray;
+  background:white">Diploma in Clean Energy</span></p></td><td style="width:153.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  mso-border-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt" valign="top" width="205"><p style="margin-bottom:0cm;line-height:normal" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;mso-fareast-font-family:
+  &quot;Times New Roman&quot;;color:gray;background:white">Course Silver Medal</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif;mso-fareast-font-family:
+  &quot;Times New Roman&quot;"></span></p><p style="margin-bottom:7.5pt;line-height:normal;background:
+  white" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  mso-fareast-font-family:&quot;Times New Roman&quot;;color:gray">Forevertrust International (S) Project Prize</span></p><p style="margin-bottom:7.5pt;line-height:normal;background:
+  white" class="MsoNormal"><span style="font-size:10.5pt;font-family:&quot;Helvetica&quot;,sans-serif;
+  mso-fareast-font-family:&quot;Times New Roman&quot;;color:gray">Director's List Award</span></p></td></tr></tbody></table>
