{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/Former Students' Achievements/2023.md
+++ b/_about-us/Former Students' Achievements/2023.md
@@ -4,3 +4,7 @@ permalink: /about-us/former-students-achievements/2023/
 description: ""
 third_nav_title: Former Students' Achievements
 ---
+| Institute | Former Students | Course | Award |
+| -------- | -------- | -------- | -------- |
+| Singapore Polytechnic     | Lim JianFeng     | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
+| Singapore Polytechnic     | Nicole Tay     | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
