{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/Former Students' Achievements/2023.md
+++ b/_about-us/Former Students' Achievements/2023.md
@@ -6,5 +6,5 @@ third_nav_title: Former Students' Achievements
 ---
 | Institute | Former Students | Course | Award |
 | -------- | -------- | -------- | -------- |
-| Singapore Polytechnic     | Lim JianFeng     | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
-| Singapore Polytechnic     | Nicole Tay     | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
+| Singapore Polytechnic     | [Lim JianFeng](/images/mae_lim%20jianfeng.png)      | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
+| Singapore Polytechnic     | [Nicole Tay](/images/mad_nicole%20tay.png)    | Singapore Polytechnic Scholarship Award     | Scholarship Award    |
