--- a/_about-us/School Achievements/2023.md
+++ b/_about-us/School Achievements/2023.md
@@ -4,3 +4,19 @@ permalink: /about-us/school-achievements/2023/
 description: ""
 third_nav_title: School Achievements
 ---
+# **Achievement 2023**
+
+##### **Academic**
+
+
+
+##### **Co-curricular and Character Development Programmes**
+
+
+
+| CCAs | Event / Programme | Awards Attained |
+| -------- | -------- | -------- |
+| Band     | SYF     | Certificate of ACCOMPLISHMENT    |
+| Choir     | SYF     | Certificate of DISTINCTION     |
+| Drama    | SYF     | Certificate of ACCOMPLISHMENT    |
+|  Chinese Dance     | SYF     |  Certificate of DISTINCTION   |
