{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/School Achievements/2023.md
+++ b/_about-us/School Achievements/2023.md
@@ -8,11 +8,15 @@ third_nav_title: School Achievements
 
 ##### **Academic**
 
+| Subjects | Event / Programme | Awards Attained |
+| -------- | -------- | -------- |
+| D&T     | Design Award 2023    | Creative Aesthetics -  J35 Cheah Zhi Yu Amber    |
+|      |     | Creative Aesthetics - J35 Ng Qian Yi    |
+|      |     | Creative Aesthetics - J37 Sim Jia En    |
+
 
 
 ##### **Co-curricular and Character Development Programmes**
-
-
 
 | CCAs | Event / Programme | Awards Attained |
 | -------- | -------- | -------- |
