{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/School Achievements/2023.md
+++ b/_about-us/School Achievements/2023.md
@@ -24,3 +24,6 @@ third_nav_title: School Achievements
 | Choir     | SYF     | Certificate of DISTINCTION     |
 | Drama    | SYF     | Certificate of ACCOMPLISHMENT    |
 |  Chinese Dance     | SYF     |  Certificate of DISTINCTION   |
+
+![](/images/2023%20syf_page_1.jpg)
+![](/images/2023syf_page_2.jpg)
