--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -12,3 +12,6 @@ third_nav_title: Photo Gallery
 #### CNY Celebration
 ![](/images/2023%20CNY_Page_1.jpg)
 ![](/images/2023%20CNY_Page_2.jpg)
+
+
+#### Cross Country
