{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -15,3 +15,5 @@ third_nav_title: Photo Gallery
 
 
 #### Cross Country
+![](/images/2023%20x%20country_page_1.jpg)
+![](/images/2023%20x%20country_page_2.jpg)
