{"message":"Update file: 2023.md","fileName":"2023.md","userId":"816"}

--- a/_about-us/School Achievements/2023.md
+++ b/_about-us/School Achievements/2023.md
@@ -24,6 +24,9 @@ third_nav_title: School Achievements
 | Choir     | SYF     | Certificate of DISTINCTION     |
 | Drama    | SYF     | Certificate of ACCOMPLISHMENT    |
 |  Chinese Dance     | SYF     |  Certificate of DISTINCTION   |
+| Vollayball     | East Zone B Division     |  4th Place   |
+| Vollayball     | East Zone C Division     |  3rd Place   |
+| Vollayball     | National Schools Games   |  7th Place   |
 
 ![](/images/2023%20syf_page_1.jpg)
 ![](/images/2023syf_page_2.jpg)
