{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -1,7 +1,7 @@
 ---
 title: "2024"
 permalink: /about-us/photo-gallery/2024/
-variant: tiptap
+variant: markdown
 description: ""
 third_nav_title: Photo Gallery
 ---
