{"message":"Update file: 2023.md","userId":"816","fileName":"2023.md"}

--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -3,6 +3,7 @@ title: "2023"
 permalink: /about-us/Photo-Gallery/photo-gallery-2023/
 description: ""
 third_nav_title: Photo Gallery
+variant: markdown
 ---
 #### Levels Activities
 ![](/images/2023%20Levels%20activities_Page_1.jpg)
@@ -17,3 +18,15 @@ third_nav_title: Photo Gallery
 #### Cross Country
 ![](/images/2023%20x%20country_page_1.jpg)
 ![](/images/2023%20x%20country_page_2.jpg)
+
+
+#### Student Leader Investiture
+![](/images/2023/2023_SL.jpg)
+![](/images/2023/IMG_4594.JPG)
+![](/images/2023/IMG_4605.JPG)
+![](/images/2023/IMG_4613.JPG)
+![](/images/2023/IMG_4620.JPG)
+
+
+#### National Day Celebration
+![](/images/2023/2023_NDP.jpg)
