{"message":"Update file: 2023.md","userId":"816","fileName":"2023.md"}

--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -30,3 +30,8 @@ variant: markdown
 
 #### National Day Celebration
 ![](/images/2023/2023_NDP.jpg)
+![](/images/2023/IMG_7724_copy.jpg)
+
+
+#### Open House
+![](/images/2023/2023_open_house.jpg)
