{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -6,7 +6,7 @@ description: ""
 third_nav_title: Photo Gallery
 ---
 #### Sec 1 Level Activities
-
+<iframe allowfullscreen="true" height="389" width="640" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRnUIreIFvFmNFGOdobf09mb7ESIKnpKdV0ThKKXFbQfDA7YyN7D1A4fC6EpgCz2g/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 
 
 
