--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -19,3 +19,4 @@ third_nav_title: Photo Gallery
 
 
 #### Sec 4/5 Level Activities
+<iframe allowfullscreen="true" height="389" width="640" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTZy07AhQZQ3YkSFUvWk42wdJsNo8Gzm5TZfQYAL8g9zw3gRvyX9xwVU8Vy5zEfxQ/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
