--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -15,7 +15,7 @@ third_nav_title: Photo Gallery
 
 
 #### Sec 3 Level Activities
-
+<iframe allowfullscreen="true" height="389" width="640" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vS9Iz51iZIcVHPYfV6VpdKQ7wJB3AR_8_lrULKuBI1FGnMyjqnO5VQsUh7WtzgkZg/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 
 
 #### Sec 4/5 Level Activities
