{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -11,7 +11,7 @@ third_nav_title: Photo Gallery
 
 
 #### Sec 2 Level Activities
-
+<iframe allowfullscreen="true" height="389" width="640" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRPhGyO3vOeyThztVtbaR4L12DcBuc72W59IKvxjS0lBF9IBFEfPlwCDUnP_0m-qg/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 
 
 #### Sec 3 Level Activities
