{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -22,6 +22,10 @@ third_nav_title: Photo Gallery
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTZy07AhQZQ3YkSFUvWk42wdJsNo8Gzm5TZfQYAL8g9zw3gRvyX9xwVU8Vy5zEfxQ/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 </div>
 <p></p>
-<h4>GM100 Carnival</h4>
+<h4>Chinese New Year Celebration</h4>
 <p></p>
+<h4>GM100 Carnival</h4>
+<div class="iframe-wrapper">
+<iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSBsWlX90MO5kyYAf99ooXfxyMcBLr3P5Pn1N_dg-fhYKoJoqsqjs4H1mfqWvTv5Q/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+</div>
 <p></p>
