{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -23,7 +23,9 @@ third_nav_title: Photo Gallery
 </div>
 <p></p>
 <h4>Chinese New Year Celebration</h4>
-<p></p>
+<div class="iframe-wrapper">
+<iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQuIrxWvivybX-QlX727Yl6gRwpXovvEjLrycJ1YM-awv1-6iLnQItdYN1t-ugkgg/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+</div>
 <h4>GM100 Carnival</h4>
 <div class="iframe-wrapper">
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSBsWlX90MO5kyYAf99ooXfxyMcBLr3P5Pn1N_dg-fhYKoJoqsqjs4H1mfqWvTv5Q/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
