--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -30,4 +30,8 @@ third_nav_title: Photo Gallery
 <div class="iframe-wrapper">
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSBsWlX90MO5kyYAf99ooXfxyMcBLr3P5Pn1N_dg-fhYKoJoqsqjs4H1mfqWvTv5Q/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 </div>
+<h4>Students Leaders' Investiture</h4>
+<div class="iframe-wrapper">
+<iframe allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vT7qXNCfrSeQsdl6XVAiZvy9c1zUToBbk5yupcw7a2hQntgEI2TEtqZ_JJODtG7GQ/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+</div>
 <p></p>
