{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -21,7 +21,6 @@ third_nav_title: Photo Gallery
 <div class="iframe-wrapper">
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTZy07AhQZQ3YkSFUvWk42wdJsNo8Gzm5TZfQYAL8g9zw3gRvyX9xwVU8Vy5zEfxQ/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 </div>
-<p></p>
 <h4>Chinese New Year Celebration</h4>
 <div class="iframe-wrapper">
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQuIrxWvivybX-QlX727Yl6gRwpXovvEjLrycJ1YM-awv1-6iLnQItdYN1t-ugkgg/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
@@ -30,8 +29,11 @@ third_nav_title: Photo Gallery
 <div class="iframe-wrapper">
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSBsWlX90MO5kyYAf99ooXfxyMcBLr3P5Pn1N_dg-fhYKoJoqsqjs4H1mfqWvTv5Q/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 </div>
+<h4>Centennial Thanksgiving Service</h4>
+<p></p>
 <h4>Students Leaders' Investiture</h4>
 <div class="iframe-wrapper">
-<iframe allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vT7qXNCfrSeQsdl6XVAiZvy9c1zUToBbk5yupcw7a2hQntgEI2TEtqZ_JJODtG7GQ/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+<iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vT7qXNCfrSeQsdl6XVAiZvy9c1zUToBbk5yupcw7a2hQntgEI2TEtqZ_JJODtG7GQ/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 </div>
+<h4>Awards Presentation </h4>
 <p></p>
