{"message":"Update file: 2024.md","userId":"816","fileName":"2024.md"}

--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -47,3 +47,8 @@ third_nav_title: Photo Gallery
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRI_nNO0WrzmYog0SiIlA7nw8Jaf5wA0XIEbOcXeudHBqSv0EValu3Rgl1e67wHzw/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 </div>
 <p></p>
+<h4>National Day Celebration</h4>
+<div class="iframe-wrapper">
+<iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/1Dn6eZ6i-xf9cDnHTzc7ezIOUioIvCufq/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+</div>
+<p></p>
