--- a/_about-us/Photo Gallery/2024.md
+++ b/_about-us/Photo Gallery/2024.md
@@ -52,3 +52,9 @@ third_nav_title: Photo Gallery
 <iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/1Dn6eZ6i-xf9cDnHTzc7ezIOUioIvCufq/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
 </div>
 <p></p>
+<h4>Teachers' Day Celebration</h4>
+<div class="iframe-wrapper">
+<iframe height="389" width="640" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/1NvKmz_TZJTJrhr6BlwUp1bAPVA2EWonP/embed?start=true&amp;loop=true&amp;delayms=3000"></iframe>
+</div>
+<h4></h4>
+<p></p>
