--- a/_students/Assessment Matters/2025.md
+++ b/_students/Assessment Matters/2025.md
@@ -6,4 +6,4 @@ description: ""
 third_nav_title: Assessment Matters
 ---
 <p>Click <a href="https://sites.google.com/moe.edu.sg/gmss-assessment/home" rel="noopener noreferrer nofollow" target="_blank">here</a> for
-the Common Test 1 Schedule.</p>
+details.</p>
